--- a/main_tara.ipynb
+++ b/main_tara.ipynb
@@ -166,7 +166,7 @@
     "push!(positions,λ)\n",
     "end\n",
     "\n",
-    "#use this command if you want an intertive figure\n",
+    "#use this command if you want an interactive figure\n",
     "#GLMakie.activate!()\n",
     "\n",
     "set_theme!(fonts = (; regular = \"cmr10\", bold = \"Times New Roman Bold\"))\n",
